--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jquery": "^3.7.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^7.1.3",
     "remix": "^2.15.2",
     "tailwindcss": "^4.0.0"
   },
