--- a/package.json
+++ b/package.json
@@ -4,20 +4,25 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite ",
+    "host": "vite --host --port 5173",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.0.0",
     "animate.css": "^4.1.1",
+    "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "fontawesome": "^5.6.3",
     "jquery": "^3.7.1",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.9",
     "react-dom": "^18.3.1",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^7.1.3",
     "remix": "^2.15.2",
     "tailwindcss": "^4.0.0"
