--- a/package.json
+++ b/package.json
@@ -15,17 +15,20 @@
     "@material-tailwind/react": "^2.1.10",
     "@tailwindcss/vite": "^4.0.0",
     "animate.css": "^4.1.1",
+    "apexcharts": "^4.5.0",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "fontawesome": "^5.6.3",
     "jquery": "^3.7.1",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
+    "react-apexcharts": "^1.7.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^18.3.1",
     "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^7.1.3",
     "remix": "^2.15.2",
+    "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.0.0"
   },
   "devDependencies": {
